# semantic-search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_dataset_loader.py
configs/: api.yaml  dataset.yaml  evaluation.yaml  logging.yaml  model.yaml
experiments/benchmarks/: evaluation_metrics.csv
notebooks/: 01_data_exploration.ipynb  02_model_evaluation.ipynb
scripts/: build_dense_index.py  build_faiss_index.py  build_tfidf_index.py  prepare_dataset.py  test_dense_search.py  test_faiss_search.py  test_hybrid_search.py  test_search.py
src/api/: main.py  routers.py  schemas.py
src/config/: config.py
src/core/: document.py
src/datasets/: base.py  csv_loader.py  hf_loader.py  parquet_loader.py
src/embeddings/: sentence_transformer.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/factories/: dataset_factory.py
src/indexing/: dense_index.py  faiss_index.py  tfidf_index.py
src/preprocessing/: cleaner.py  pipeline.py
src/preprocessing/adapters/: adapter.py
src/retrieval/: base.py  dense.py  hybrid.py  tfidf.py
src/services/: search_service.py
