[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search"
version = "0.1.0"
description = "Semantic search using Sentence Transformers and Hugging Face"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Machine Learning & Search Core
    "torch==2.5.1",
    "transformers==4.41.2",
    "sentence-transformers==2.7.0",
    "datasets==2.19.1",
    "evaluate>=0.4.6",
    "huggingface-hub==0.23.5",
    "faiss-cpu==1.14.3",

    # Data Processing
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.1",
    "pyarrow==16.1.0",
    "fsspec==2024.3.1",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",

    # Utilities & API Base
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "tqdm>=4.68.3",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    # Code Quality & Testing
    "black==26.5.1",
    "ruff==0.15.18",
    "isort==8.0.1",
    "pytest==9.1.1",

    # Research & Visualization
    "jupyter==1.1.1",
    "notebook==7.6.0",
    "ipykernel==7.3.0",
    "ipywidgets==8.1.8",
    "matplotlib==3.11.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"